--- a/Templates/index.html
+++ b/Templates/index.html
@@ -55,8 +55,10 @@
             <div class="card">
                 <div class="card-header">Monthly Revenue and Expenses</div>
                 <div class="card-body">
-                    <canvas id="revenueExpensesChart"></canvas>
+                    <!-- Set a specific height here -->
+                    <canvas id="revenueExpensesChart" style="height: 400px;"></canvas>
                 </div>
+                
             </div>
         </div>
 
